Fix fonts, js as a separate file - including it breaks the build

--- a/src/assets/sass/base/_fonts.scss
+++ b/src/assets/sass/base/_fonts.scss
@@ -56,67 +56,67 @@
   font-family: "TTNorms";
   font-weight: 400;
   font-style: normal;
-  src: url("../fonts/370DF3_5_0.eot");
-  src: url("../fonts/370DF3_5_0.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/370DF3_5_0.woff2") format("woff2"), url("../fonts/370DF3_5_0.woff") format("woff"),
-    url("../fonts/370DF3_5_0.ttf") format("truetype");
+  src: url("/assets/fonts/370DF3_5_0.eot");
+  src: url("/assets/fonts/370DF3_5_0.eot?#iefix") format("embedded-opentype"),
+    url("/assets/fonts/370DF3_5_0.woff2") format("woff2"), url("/assets/fonts/370DF3_5_0.woff") format("woff"),
+    url("/assets/fonts/370DF3_5_0.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "TTNorms";
   font-weight: 400;
   font-style: italic;
-  src: url("../fonts/370DF3_2_0.eot");
-  src: url("../fonts/370DF3_2_0.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/370DF3_2_0.woff2") format("woff2"), url("../fonts/370DF3_2_0.woff") format("woff"),
-    url("../fonts/370DF3_2_0.ttf") format("truetype");
+  src: url("/assets/fonts/370DF3_2_0.eot");
+  src: url("/assets/fonts/370DF3_2_0.eot?#iefix") format("embedded-opentype"),
+    url("/assets/fonts/370DF3_2_0.woff2") format("woff2"), url("/assets/fonts/370DF3_2_0.woff") format("woff"),
+    url("/assets/fonts/370DF3_2_0.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "TTNorms";
   font-weight: 500;
   font-style: normal;
-  src: url("../fonts/370DF3_4_0.eot");
-  src: url("../fonts/370DF3_4_0.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/370DF3_4_0.woff2") format("woff2"), url("../fonts/370DF3_4_0.woff") format("woff"),
-    url("../fonts/370DF3_4_0.ttf") format("truetype");
+  src: url("/assets/fonts/370DF3_4_0.eot");
+  src: url("/assets/fonts/370DF3_4_0.eot?#iefix") format("embedded-opentype"),
+    url("/assets/fonts/370DF3_4_0.woff2") format("woff2"), url("/assets/fonts/370DF3_4_0.woff") format("woff"),
+    url("/assets/fonts/370DF3_4_0.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "TTNorms";
   font-weight: 500;
   font-style: italic;
-  src: url("../fonts/370DF3_3_0.eot");
-  src: url("../fonts/370DF3_3_0.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/370DF3_3_0.woff2") format("woff2"), url("../fonts/370DF3_3_0.woff") format("woff"),
-    url("../fonts/370DF3_3_0.ttf") format("truetype");
+  src: url("/assets/fonts/370DF3_3_0.eot");
+  src: url("/assets/fonts/370DF3_3_0.eot?#iefix") format("embedded-opentype"),
+    url("/assets/fonts/370DF3_3_0.woff2") format("woff2"), url("/assets/fonts/370DF3_3_0.woff") format("woff"),
+    url("/assets/fonts/370DF3_3_0.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "TTNorms";
   font-weight: 600;
   font-style: italic;
-  src: url("../fonts/370DF3_0_0.eot");
-  src: url("../fonts/370DF3_0_0.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/370DF3_0_0.woff2") format("woff2"), url("../fonts/370DF3_0_0.woff") format("woff"),
-    url("../fonts/370DF3_0_0.ttf") format("truetype");
+  src: url("/assets/fonts/370DF3_0_0.eot");
+  src: url("/assets/fonts/370DF3_0_0.eot?#iefix") format("embedded-opentype"),
+    url("/assets/fonts/370DF3_0_0.woff2") format("woff2"), url("/assets/fonts/370DF3_0_0.woff") format("woff"),
+    url("/assets/fonts/370DF3_0_0.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "TTNorms";
   font-weight: 600;
   font-style: normal;
-  src: url("../fonts/370DF3_1_0.eot");
-  src: url("../fonts/370DF3_1_0.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/370DF3_1_0.woff2") format("woff2"), url("../fonts/370DF3_1_0.woff") format("woff"),
-    url("../fonts/370DF3_1_0.ttf") format("truetype");
+  src: url("/assets/fonts/370DF3_1_0.eot");
+  src: url("/assets/fonts/370DF3_1_0.eot?#iefix") format("embedded-opentype"),
+    url("/assets/fonts/370DF3_1_0.woff2") format("woff2"), url("/assets/fonts/370DF3_1_0.woff") format("woff"),
+    url("/assets/fonts/370DF3_1_0.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "Grifo";
   font-weight: 700;
   font-style: normal;
-  src: url("../fonts/grifo-l-black.eot");
-  src: url("../fonts/grifo-l-black.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/grifo-l-black.woff2") format("woff2"), url("../fonts/grifo-l-black.woff") format("woff");
+  src: url("/assets/fonts/grifo-l-black.eot");
+  src: url("/assets/fonts/grifo-l-black.eot?#iefix") format("embedded-opentype"),
+    url("/assets/fonts/grifo-l-black.woff2") format("woff2"), url("/assets/fonts/grifo-l-black.woff") format("woff");
 }
